Added the resources for the User, updated swagger and tests
